packages/rspack/tests/diagnostics/module-parse-failed/basic/stats.err
PublicPath: (none)
asset main.js 1.19 KiB [emitted] (name: main)
Entrypoint main 1.19 KiB = main.js
./index.js

ERROR in ./index.js ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected ',', got ':'
         ╭─[1:1]
       1 │ function add(a: number, b: number): number {
         ·               ┬
         ·               ╰── Expected ',', got ':'
       2 │     return a + b;
       3 │ }
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error (23caa0a03c19f14d9b0d)